[metadata]
name = nautiterm
version = 0.0.1
description = Nautilus extension for opening a configurable terminal at the current location
long_description = file: README.rst
keywords = Nautilus, Terminal, Terminator
license = GNU General Public License v2 (GPLv2)
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications :: Gnome
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[options]
zip_safe = True
packages = find:
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*,
install_requires =
  PyGObject >= 3.28
  pyyaml >= 3.13

[options.package_data]
* = *.txt, *.rst

[options.packages.find]
where = src

[bdist_wheel]
universal = True
